--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel = "styilesheet" href="style.css">
-<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "styilesheet" href="style.css">
+    <title>batatinha</title>
 </head>
 <body>
+    <div class="ini">
 <h1>
-eu te amo
+frita
 </h1>
+<a href="https://www.recepedia.com/pt-br/receita/salgados/236946-batata-frita-crocante/"class= "button">Veja aqui</a>
 </body>
 </html>
+
