--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="ini">
 <h1>
-frita
+Batata Frita
 </h1>
 <a href="https://www.recepedia.com/pt-br/receita/salgados/236946-batata-frita-crocante/"class= "button">Veja aqui</a>
 </body>
-</html>
-
+</html
+<img id="batatinha" src="batatita" class="Batata">
